# shelter_server_HPC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: QAWorkflow.yml
include/: server.hpp  socketSetup.hpp  tcp_client.h  udp_client.h  utils.hpp
lib/alertInfection/: CMakeLists.txt
lib/alertInfection/include/: alertInfection.h
lib/alertInfection/src/: alertInfection.c
lib/cJSON/: CMakeLists.txt
lib/cannyEdgeFilter/: .gitignore  CMakeLists.txt
lib/cannyEdgeFilter/.github/actions/documentation/: action.yml
lib/cannyEdgeFilter/.github/workflows/: StyleAndDoc.yml
lib/cannyEdgeFilter/include/: cannyEdgeFilter.hpp
lib/cannyEdgeFilter/src/: cannyEdgeFilter.cpp
lib/cannyEdgeFilter/tests/E2E/: EndToEndTesting.cpp
lib/cannyEdgeFilter/tests/unit/: no_max_sup_test.cpp
lib/emergNotif/: CMakeLists.txt
lib/emergNotif/include/: emergNotif.h
lib/emergNotif/src/: emergNotif.c
lib/myRocksDbWrapper/: CMakeLists.txt
lib/myRocksDbWrapper/include/: myRocksDbWrapper.hpp
lib/myRocksDbWrapper/src/: myRocksDbWrapper.cpp
lib/rocksDbWrapper/: CMakeLists.txt
lib/rocksDbWrapper/.github/actions/building/: action.yml
lib/rocksDbWrapper/.github/actions/coverage_and_test/: action.yml
lib/rocksDbWrapper/.github/actions/style/: action.yml
lib/rocksDbWrapper/.github/workflows/: QAWorkflow.yml
lib/rocksDbWrapper/include/: rocksDbWrapper.hpp
lib/rocksDbWrapper/src/: rocksDbWrapper.cpp
lib/socketSetup/: CMakeLists.txt
lib/socketSetup/include/: socket_setup.h
lib/socketSetup/src/: socket_setup.c
lib/suppliesData/: CMakeLists.txt
lib/suppliesData/include/: supplies_module.h
lib/suppliesData/src/: supplies_module.c
scripts/: build.sh  clangformat.sh  tests.sh
src/clients/: tcp_client.c  udp_client.c
src/server/: main.cpp  server.cpp  socketSetup.cpp  utils.cpp
tests/: CMakeLists.txt
tests/e2e/: ServerTestE2E.cpp
tests/unit/: serverTests.cpp  utilsTests.cpp
